--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "lint": "eslint .",
     "puglint": "pug-lint -c .puglintrc.json views/",
-    "watch": "nodemon -e js,pug,css,json app.js",
+    "watch": "DEBUG=express-auth:* nodemon -e js,pug,css,json ./bin/www",
     "postinstall": "bower install",
     "start": "node ./bin/www"
   },
@@ -22,6 +22,7 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
+    "nodemon": "^1.11.0",
     "pug": "~2.0.0-beta10",
     "serve-favicon": "~2.3.2"
   },
