--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,6 @@ services:
     depends_on:
       - mongo
   mongo:
-    image: "mongo:3.0.14"
+    image: "mongo:3.4.2"
+    volumes:
+     - ${HOME}/data/mongodb:/data/db
