--- a/package.json
+++ b/package.json
@@ -18,11 +18,20 @@
   "dependencies": {
     "body-parser": "~1.16.0",
     "bower": "^1.8.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.15.1",
+    "express-validator": "^3.1.2",
+    "mongoose": "^4.8.4",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta10",
     "serve-favicon": "~2.3.2"
   },
